<?xml version="1.0"?>
<package>
	<name>code_profiler</name>
	<version>0.0.0</version>
	<description>The code_profiler package</description>

	<maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

	<license>BSD</license>

	<author>Tim de Jager</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>roscpp</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>python-numpy</run_depend>
</package>
