<?xml version="1.0"?>
<package>
  <name>ed_msgs</name>
  <version>0.0.0</version>
  <description>The ed_msgs package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>tue_serialization</build_depend>
<!--
  <build_depend>std_msgs</build_depend>
-->
  <build_depend>geometry_msgs</build_depend>
<!--
  <build_depend>std_srvs</build_depend>
-->

  <run_depend>message_runtime</run_depend>
  <run_depend>tue_serialization</run_depend>
<!--
  <run_depend>std_msgs</run_depend>
-->
  <run_depend>geometry_msgs</run_depend>
<!--
  <run_depend>std_srvs</run_depend>
-->

</package>
