<?xml version="1.0"?>
<package>
	<name>tue_serialization</name>
	<version>0.0.0</version>
	<description>The tue_serialization package</description>

	<maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>
</package>
